tests/error/14_parser_else_without_brace.mire
import std

pub fn main: () {
    set x = 10
    if x > 5 {
        use dasu("yes")
    } else
        use dasu("no")
}